syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.orangetalents";
option java_outer_classname = "Cliente";

package br.com.zup.orangetalents;

service InsereChavePixService {
  rpc insere(ChavePixRequest) returns (ChavePixResponse){}
}

service RemoveChavePixService{
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

enum TipoContaGrpc {
  TIPOCONTADESCONHECIDA = 0;
  CORRENTE = 1;
  POUPANCA = 2;
}

enum TipoChaveGrpc {
  ALEATORIA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
}

message ChavePixRequest{
  string codigo = 1;
  TipoContaGrpc tipoConta = 2;
  TipoChaveGrpc tipoChave = 3;
  string chave = 4;
}

message ChavePixResponse{
  string pixId = 1;
}

message RemoveChavePixRequest{
  string pixId = 1;
  string clientId = 2;
}

message RemoveChavePixResponse{
}